tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__TomeofKnowledge-AAAAAAAAAAAAAAAAAAAA5w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 231,
  "prerequisites": [
    230
  ],
  "properties": {
    "auto_claim": false,
    "desc": "All the things you've discovered so far, you need to write them down. But you're lazy, and you have a wand, so why not try a magical way to \"write down\" your research? You wonder if you could enchant a book with your wand, so that it will keep track of your progress... You should try that on a bookshelf!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tome of Knowledge",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    230
  ],
  "rewards": [],
  "tasks": []
}
