tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__TubeMadness-xoH_knd-RV-22QEfLUtuDA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8610395812663094796,
  "prerequisites": [
    254
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you want to move essentia from your Alchemical furnace to your warded Jars without getting it all gunked up with different essentia types?\n\nWell you came to the right place, with the use of buffered tubes and your handy wand you can move your essentia in tubes to fill all your jars without having to manually break and replace one jar at a time.\n\nTo create a simple setup place the buffered tubes in a main line from your Arcane Alembic with tubes coming out of the main buffered tube line. These standard tubes will then go directly into a warded jar. To get the essentia to flow correctly into the buffered tubes, shift-right-click the output side of the buffered tube with your wand until it is red. This will change the band to a red band which will limit the suction of the Essentia.\n\nThe Essentia will be forced from the buffered tube to a normal tube then into your Warded jars. Chain your buffered tubes as needed until all your Warded Jars will fit.\n§4\nNote: This system will get gunked up with essentia if any of your Warded Jars are full!\n\n§rIf you would like more information please check out the guide 'A Thaumaturge Guide to Laying Pipe' by xlstadal for more in-depth Thaumcraft 4 Tube knowledge.\n\n§9§n[url]https://docs.google.com/document/d/1fMvJ5HbeOdy4UgBMe47cggis02idxWoMDgK81SgowEo[/url]§r",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tube Madness",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    254
  ],
  "rewards": [],
  "tasks": []
}
