tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__WarpWarnings-AAAAAAAAAAAAAAAAAAAG8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1778,
  "prerequisites": [
    231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Thaumcraft offers considerable power from its devices and tools. But power comes with a price.... That price is represented by Warp: A corruption of the character's mind and soul, inflicting progressively more dire effects upon them.\n\nWhile the effects of warp can range from annoying to deadly, accumulating enough of it can also grant you access to greater power... at the cost of increasing madness, and attention from dark powers. At least, others may call it madness... but is it truly insanity, when the voices in your head grant useful knowledge?\n\nWarp Theory adds a bunch of new Warp Effects to the Player. Be very careful because you don't want to spawn a Wither in your base.\n\n[note]If you're still early on in your thaumcraft journey, Warp shouldn't be something that scares you away from progressing further. You'll only stumble upon dangerous warp effects once you've done a lot of research. If you still wanna play it safe, make sure to avoid research that's labeled with \"§5Forbidden Knowledge§r\" [/note]\n\n5 warp: Message\n10 warp: Fake Explosion\n15 warp: Coin, Pumpkin\n20 warp: Lay Eggs, Spawn Phantoms\n25 warp: Fake Creeper, Fake Rain\n30 warp: GregTech Fake Sounds, Spawn Bats\n35 warp: Blood, Fake Enderman\n40 warp: Spawn Friendly Creeper\n45 warp: Jump Boost, Nausea\n50 warp: Insomnia, Vis Drain, Strange Noise\n55 warp: Thunderstorm\n60 warp: Spawn Fire Bats\n65 warp: Blindness, Poison\n70 warp: Livestock Rain\n75 warp: Spawn Doppelganger\n80 warp: Spawn Endermen, Wither Potion\n85 warp: Wind\n90 warp: Ender Pearl\n95 warp: Blaze Fireball\n100 warp: Litmus Paper, Junk, Call from the Deep\n110 warp: Obsidian\n120 warp: Lightning\n125 warp: Inventory Swap\n130 warp: Random Teleport\n140 warp: Acceleration\n150 warp: Fake Wither, Inventory Scramble\n160 warp: Countdown Bomb\n170 warp: Mushrooms\n175 warp: Snow\n180 warp: Decay\n190 warp: Swamp\n200 warp: Spawn Wither",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Warp Warnings",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    231
  ],
  "rewards": [],
  "tasks": []
}
