tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__WitchyWoman-AAAAAAAAAAAAAAAAAAAA4A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 224,
  "prerequisites": [
    2065,
    1996
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you've made the spinning wheel and done the research, you can make these.\n\nThe vis discount is very useful both to craft more efficiently and to ease your wand progression. Maybe you should look around for more discounts?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Witchy (Wo)man",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2065,
    1996
  ],
  "rewards": [],
  "tasks": []
}
